<resources>
    <string name="app_name">Medium Clone Android</string>
    <string name="menu">Menu</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profile_name">Profile Name</string>
    <string name="view_profile">View Profile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_audio">Audio</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_interest">Interest</string>
    <string name="medium">Medium</string>
    <string name="join_medium">Join Medium.</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="or">Or,</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="Long_boi">By signing up, you agree to our Terms of Service and acknowledge that our Privacy Policy applies to you.</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="facebook_app_id">4055082944535098</string>
    <string name="fb_login_protocol_scheme">fb4055082944535098</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="idk">Display Picture for the user profile activity</string>
    <string name="Sign_out">Sign Out</string>
    <string name="create_story">Create Story</string>
    <string name="write_your_story">Write your story</string>
    <string name="publish">Publish</string>
    <string name="done">Done</string>
    <string name="some_arbitrary_text">Some arbitrary text</string>
    <string name="some_arbitrary_text2">Lorem ipsum dolor sit amet consectetur adipisicing elit.
        Iste accusamus aut quidem culpa minima vero, dolor iusto, vitae est nemo quos? Quibusdam expedita nemo dolor? Quo natus cupiditate, sit accusantium iste saepe aliquid doloribus voluptas magni maxime, blanditiis placeat quam quaerat ipsam quas quos, numquam tempore? Exercitationem commodi, omnis a nihil excepturi ea quia debitis voluptas libero tenetur? Debitis explicabo ab quaerat ullam ipsa sapiente laborum accusantium illo maxime vitae, accusamus deleniti perspiciatis ea quas at, assumenda consectetur voluptatibus quia exercitationem labore reiciendis? Officia facere asperiores pariatur? Eaque, iusto dolorum beatae, accusamus officia voluptate quam molestias in odit hic magnam cum repellendus. Delectus id incidunt deserunt voluptate totam, cum animi quos nemo in quod fugit illum nobis quidem saepe quibusdam similique adipisci molestias doloremque velit porro culpa esse?</string>
    <string name="hello">Hello</string>
    <string name="_5_minutes_ago">5 minutes ago</string>
    <string name="stories">Stories</string>
    <string name="title">Title</string>
    <string name="profile_name_">"Profile Name: "</string>
    <string name="jan_12_2021">Jan 12, 2021</string>
    <string name="circular_blob">●</string>
    <string name="read_more">Read More</string>
    <string name="my_stories">My Stories</string>
    <string name="published_fragment">Published Fragment</string>
    <string name="draft_fragment">Draft Fragment</string>
    <string name="storybook">Storybook</string>
    <string name="support_writers">Support Writers</string>
    <string name="writer_s_name">Writer\'s Name</string>
    <string name="support">Support</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="title_of_the_story">Title of the Story</string>
</resources>