<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_baseline_home_24"/>
        <item
            android:id="@+id/nav_audio"
            android:title="@string/menu_audio"
            android:icon="@drawable/ic_baseline_audiotrack_24"/>
        <item
            android:id="@+id/nav_bookmarks"
            android:title="@string/menu_bookmarks"
            android:icon="@drawable/ic_baseline_bookmarks_24"/>
        <item
            android:id="@+id/nav_interests"
            android:title="@string/menu_interest"
            android:icon="@drawable/ic_baseline_favorite_24"/>

        <item
            android:id="@+id/nav_create"
            android:title="@string/create_story"
            android:icon="@drawable/ic_baseline_add_24"/>
    </group>

</menu>