<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mediumcloneandroid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_stories"
        android:name="com.example.mediumcloneandroid.ui.my_story.MyStoryFragment"
        android:label="@string/my_stories"
        tools:layout="@layout/fragment_my_stories"/>

    <fragment
        android:id="@+id/nav_create"
        android:name="com.example.mediumcloneandroid.ui.story.CreateFragment"
        android:label="@string/create_story"
        tools:layout="@layout/fragment_create"/>

</navigation>
