<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/nav_profile_header"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@android:color/white"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/display_picture_header"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/img"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/profile_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:layout_marginBottom="4dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_profile"
        android:layout_marginBottom="4dp"/>

</LinearLayout>