<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/writer_picture"
            android:padding="2dp"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_baseline_person_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/writer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/writer_picture"
            android:maxLines="1"
            android:text="@string/writer_s_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <LinearLayout
            android:layout_width="66dp"
            android:layout_height="31dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:background="@color/white"
            android:layout_marginEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="@color/darkGreen">

                <Button
                    android:id="@+id/support_writers_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/support"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>